--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
+          <!-- <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li> -->
+          <!-- <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li> -->
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -95,7 +95,8 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Digital Signal Processing &amp; Statistical Analysis.</h3>
             <p class="fst-italic">
-              I've completed my undergrad in Psychology and soon to complete my Master in Data Science.
+              I was born in La Paz, Bolivia and studied at the Bolivian Catholic University.
+              I've completed my undergrad in Psychology and my Master in Data Science.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -138,7 +139,7 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
               <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="40" data-purecounter-end="1" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>1st Place Winner NatHacks</strong>  - Innaugural BCI Hackthon at the University of Alberta, Canada.</p>
             </div>
           </div>
@@ -146,15 +147,15 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="count-box">
               <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Ten Outstanding Young Persons, La Paz </strong> - Science and Technology category winner representing the city of La Paz.</p>
+              <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="1" class="purecounter"></span>
+              <p><strong>Ten Outstanding Young Persons, JCI La Paz </strong> - Science and Technology category winner representing the city of La Paz.</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="count-box">
               <i class="bi bi-headset"></i>
-              <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
+              <!-- <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span> -->
               <p><strong>President of NeuroTechUCB</strong> - A student initiative for Neurotechnology formed at the Bolivian Catholic University.</p>
             </div>
           </div>
@@ -162,9 +163,11 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="count-box">
               <i class="bi bi-people"></i>
-              <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
+              <!-- <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span> -->
               <p><strong>Distinction of Honor</strong> - Recognition obtained for my undergraduate thesis in Psychology.</p>
             </div>
+
+
           </div>
 
         </div>
@@ -268,7 +271,9 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Download my CV</p>
+          <!-- D:\Desktop2\m.e\rmib200.github.io\assets\cv\CV Manuel Illanes Univ.pdf -->
+          <a href = "assets/cv/CV Manuel Illanes Univ.pdf" download> Download my CV </a>
+          <!-- <p>Download my CV</p> -->
         </div>
 
         <!-- <div class="row">
@@ -328,7 +333,12 @@
       </div> -->
     </section><!-- End Resume Section -->
 
+
+
+
     <!-- ======= Portfolio Section ======= -->
+
+<!--     
     <section id="portfolio" class="portfolio section-bg">
       <div class="container">
 
@@ -443,10 +453,11 @@
         </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
+    </section>
+ End Portfolio Section -->
 
     <!-- ======= Services Section ======= -->
-    <section id="services" class="services">
+    <!-- <section id="services" class="services">
       <div class="container">
 
         <div class="section-title">
@@ -488,7 +499,10 @@
         </div>
 
       </div>
-    </section><!-- End Services Section -->
+    </section> -->
+     
+    
+    <!-- End Services Section -->
 
     <!-- ======= Testimonials Section ======= -->
     <!-- <section id="testimonials" class="testimonials section-bg">
